--- a/Proposal_V2.tex
+++ b/Proposal_V2.tex
@@ -116,24 +116,24 @@ For larger and more complex datasets like these, the bioinformatics community -f
 %Er is veel data om te gebuiken! Maar het is wel erg veel... en heterogeen
 The amount of (public) biological data has exploded in the last years (even outpacing Moore's law\footnote{A two-fold in- or decrease of a variable (here: dollar/nt) per two years.}). This is the result of the advances in omics-technologies like Next-Generation Sequencing (NGS) and Mass-Spectrometry (MS), in both performance and costs. The addition of other dimensions, like time-series or treatments, is a second factor for the highly complex nature of current biomedical research. While there are plenty of studies on single-level data analysis, both academia and industry agree that data-integration is essential to understand the complex nature of biology more thoroughly \citep{Gomez-Cabrero2014, Huttenhower2010, Searls2005, Hamid2009}. 
 
-The vast majority of large-scale integrative studies have been conducted on the coding-regions of the genome\cite{ENCODE}. Although finding functional genetic variation in the protein-coding regions of the genome has thus been the focus, these regions only amount to approximately two percent of the genome\cite{Lander2001}. Of the remaining 98\%, approximately 6.2\% is theorized to be biologically functional (i.e. under selective pressure)\cite{Rands2014}. One of the primary reasons behind this focus is the relative uncomplicated nature of studying coding regions, as consequences on lower levels (e.g. transcription, proteins) are often linearly traceable\cite{McLaren2010}. 
+The vast majority of large-scale integrative studies have been conducted on the coding-regions of the genome\cite{ENCODE}. Although finding functional genetic variation in the protein-coding regions of the genome has thus been the focus, these regions only amount to approximately two percent of the genome\cite{Lander2001}. Of the remaining 98\%, approximately 6.2\% is theorized to be biologically functional (i.e. under selective pressure)\cite{Rands2014}. One of the primary reasons behind this focus is the relatively uncomplicated nature of studying coding regions, as consequences on lower levels (e.g. transcription, proteins) are often linearly traceable\cite{McLaren2010}. 
 
-This is in contrast to the non-coding regions, which often do not show a linear effect on other levels\cite{Bird2006}. A good illustration of the complexity of the non-coding regions is the ENCyclopedia Of DNA Elements (ENCODE)-project\cite{ENCODE}, which contains over fifty different signals (e.g. histone methylation, DNase1 hypersensitivity). The fact that non-coding regions have roles in the regulation of both close and distant genes (i.e. \textit{cis-} and \textit{trans-}acting) provides even more complexity to the analysis of structural variants (SVs) in these regions. For example, the Pierre Robin Syndrome (PRS): SVs (deletions or duplications) in the 3Mb surrounding the SOX9-gene in particular tissues are causative of the striking phenotype of undeveloped mandibles and tongue in children\cite{Benko2009,Kurth2009}. 
+This is in contrast to the non-coding regions, which often do not show a linear effect on other levels\cite{Bird2006}. A good illustration of the complexity of the non-coding regions is the ENCyclopedia Of DNA Elements (ENCODE)-project\cite{ENCODE}, which contains over fifty different signals (e.g. histone methylation, DNase1 hypersensitivity). The fact that non-coding regions have roles in the regulation of both close and distant genes (i.e. \textit{cis-} and \textit{trans-}acting) provides great complexity to the analysis of structural variants (SVs) in these regions. For example, the Pierre Robin Syndrome (PRS): SVs (deletions or duplications) in the 3Mb surrounding the SOX9-gene in particular tissues are causative of the striking phenotype of undeveloped mandibles and tongue in children\cite{Benko2009,Kurth2009}. 
 \medskip
 
 \noindent
 %\subsection*{	wat valt er te halen? uitleg NC}
 %Non-coding: lastig en weinig onderzocht
 % Grootste winst is te halen in het combineren van lagen (distant relationships)
-Genome-Wide Association Studies (GWASs) on a broad range of congenital and acquired diseases (e.g. cancer) have shown that non-coding locations are associated with these diseases. This -of course- to be expected, with the discoveries of various functions of the non-coding regions: from (in)directly regulating the transcription-machinery, to playing mayor roles in mRNA-degradation and from post-transcriptional modifications, to directly affecting the localisation of the transcript\cite{Pichon2012,Barrett2012}. Pseudogenes are also categorised as non-coding, but can be resurrected by gene conversion due to structural variants\cite{Kidd2010}. Pseudogenes can perform as decoy for their coding homologs\cite{Poliseno2010} (as was found to be the case in both oncogenes and tumour suppressors) and lead to RNA-interference by pseudogene-transcribed endo-siRNAs\cite{Tam2008}.
+Genome-Wide Association Studies (GWASs) on a broad range of congenital and acquired diseases (e.g. cancer) have shown that non-coding locations are associated with these diseases. This led to the discoveries of various functions of the non-coding regions: from (in)directly regulating the transcription-machinery, to playing mayor roles in mRNA-degradation and from post-transcriptional modifications, to directly affecting the localisation of the transcript\cite{Pichon2012,Barrett2012}. Pseudogenes are also categorised as non-coding, but can be resurrected by gene conversion due to structural variants\cite{Kidd2010}. Pseudogenes can act as a decoy for their coding homologs\cite{Poliseno2010} (as was found to be the case in both oncogenes and tumour suppressors) and lead to RNA-interference by pseudogene-transcribed endo-siRNAs\cite{Tam2008}.
 
-Until 2013, however, tools and sources to systemically explore and analyse the functional consequences of variations in non-coding genomic regions were limited. In the last two years, several advances have made it possible to assess the consequences of individual variations in non-coding regions\cite{Ongen2014,Khurana2013}. Studies on cancer-specific causative non-coding variation are beginning to emerge in the last two years, including colorectal- and skin-cancer\cite{Ongen2014,Huang2013}, and computational methods for non-coding regions are just starting to come up in the literature of 2014\cite{Khurana2013,Kircher2014}. %However, no large-scale integrative studies have been performed, which is partly due to the current state of integrative methods. 
+Until 2013 tools and sources to systemically explore and analyse the functional consequences of variations in non-coding genomic regions were limited. In the last two years, several advances have made it possible to assess the consequences of individual variations in non-coding regions\cite{Ongen2014,Khurana2013}. Studies on cancer-specific causative non-coding variation are beginning to emerge in the last two years, including colorectal- and skin-cancer\cite{Ongen2014,Huang2013}, and computational methods for non-coding regions are just starting to come up in the literature of 2014\cite{Khurana2013,Kircher2014}. %However, no large-scale integrative studies have been performed, which is partly due to the current state of integrative methods. 
 \medskip
 
 \noindent
 %\subsection*{hoe valt dit te halen? (graphs: integratie en visualisatie)}
 %Distant relationships vindt je het makkelijkst met een graph
-However, only a few layers and dimensions have been integrated per study and results are -for the most part- cherry picked, instead of systematic. This is mainly due to the methods used in integration-studies: most of them are set up in the same manner as individual-level experiments, whereafter they are combined. These methods are limited due to the large amounts of parsing-time (i.e. the time to convert various file/region-formats). An example of the large amount of analytical time needed, when using these methods is the study of \citet{Munoz2011}: every two months of data-accumulation costed two years of analysis.
+However, only a few layers and dimensions have been integrated per study and results are -for the most part- cherry picked, rather than systematic. This is mainly due to the methods used in integration-studies: most of them are set up in the same manner as individual-level experiments, whereafter they are combined. These methods are limited due to the large amounts of parsing-time (i.e. the time to convert various file/region-formats). An example of the large amount of analytical time needed, when using these methods is the study of \citet{Munoz2011}: every two months of data-accumulation costs two years of analysis.
 
 The limited number of truly integrative studies use computational approaches to reconstruct biological networks. While a valid strategy, scaling the analysis from the bacteria used by \citet{Karr2012} and \citet{Lerman2012} to multi-cellular organisms proves to be difficult. The most obvious reasons for this are the complexity of the used mathematical methods, the integration of multiple data-sources (with varying file-formats) and the use of an inflexible database-structure.
 %\subsection*{	big data graph-methods}
@@ -161,7 +161,7 @@ There have been various studies on the integration of biological signals with th
 Extracting relevant information from this "hairball" of linked objects and subjects has been an important issue and challenge since the beginning of big data, as \citet{Pavlopoulos2008} stated in 2008. SPARQL provides the ability to filter on an arbitrary number of (human-readable) expressions and can combine multiple databases to query, like the RDF-databases of EMBL-EBI \citep{Jupp2014}. Another advantage of using SPARQL is the increase in scalability by including multiple triplestores in the same query. By enabling the use of small and specific triplestores, such a federated query results in faster retrieval of the data.
 
 Combining these improvements in searching and linking networks with web-based visual analytics will create a paradigm shift in the way integrative analysis of (biological) data is done. Visual analytics has been shown to result in the most optimal analysis-effectivity as it allows the user to combine the data with their own background and intuition %(fig. \ref{fig:ae})
-. Not only can data be more effectively analysed, but it can also be better understood and presented, due to the ability to provide an overview of the complete dataset\cite{Thomas2005, Keim}. 
+. Not only can data be more effectively analysed, but it can also be better understood and presented, due to the ability to provide a comprehensive overview of the complete dataset\cite{Thomas2005, Keim}. 
 %\begin{figure}[h!]
 %    \centering
 %    \includegraphics[width=0.5\textwidth]{autoVSexplo.pdf}
